<resources>
    <string name="app_name">Cash App</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="manageCards">Card Details</string>
    <string name="manageAccount">Manage Your Details</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="details">Details</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="changePassword">Change Password</string>
    <string name="update">Update</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterEmail">Enter E-mail</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="enterSurname">Enter Surname</string>
    <string name="enterPassword">Enter Password</string>
    <string name="pendingTransactions">Pending Transactions</string>
    <string name="completedTransactions">Completed Transactions</string>
    <string name="makePayment">Make Payment</string>
    <string name="activeCard">Active Card</string>
    <string name="cardHoldersName">Card Holders Name</string>
    <string name="accountNumber">Account Number</string>
    <string name="securityNumber">Security Number</string>
    <string name="sortCode">Sort Code</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="changeActiveCard">Change Active Card</string>
    <string name="activityLogs">Activity Logs</string>
    <string name="paymentRequests">Payment Requests</string>
    <string name="enterPaymentAmount">Enter Payment Amount</string>
    <string name="enterPayee">Enter Payees Username</string>
    <string name="payee">Payee</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="amount">Amount</string>
    <string name="paymentAmount"> 0.00</string>
    <string name="balance">Balance </string>
    <string name="accountCreated">Account Created</string>
    <string name="pastActivity">Past Activity</string>
    <string name="acceptPayment">Accept Payments</string>
    <string name="home">Home</string>
    <string name="enterSortCode">Enter Sort Code</string>
    <string name="enterAccountNumber">Enter Account Number</string>
    <string name="enterCardHoldersName">Enter Card Holders Name</string>
    <string name="enterSecurityNumber">Enter Security Number</string>
    <string name="enterCardNumber">Enter Card Number</string>
    <string name="addNewAccount">Add New Account</string>
    <string name="inputCardDetails">Input Card Details</string>
    <string name="changeBankDetails">Change Bank Details</string>
    <string name="accountHoldersName">Account Holders Name</string>
    <string name="reject">Reject</string>
    <string name="enterPasswordToUpdate">Enter Password To Update Details</string>
    <string name="addMoney">Add Money To Balance</string>
</resources>
