<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        />

    <Button
        android:id="@+id/manageAccountbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manageAccount"
       />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        />

    <Button
        android:id="@+id/deleteAccountbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteAccount"
        />
    </LinearLayout>
</LinearLayout>