<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    >

    <TextView
        android:id="@+id/accountHoldersNamelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/accountHoldersName"
        />

    <TextView
        android:id="@+id/accountNumberlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/accountNumber"
        />

    <TextView
        android:id="@+id/sortCodelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/sortCode"
         />

    <Button
        android:id="@+id/changeBankDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeBankDetails"/>

</LinearLayout>
