<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/addBankAccountlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="30dp"
        android:text="Add Bank Account"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cardHoldersNamelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cardHoldersName"
            />
        <EditText
            android:id="@+id/cardHoldersNametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enterCardHoldersName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accountNnumberlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/accountNumber"
            />
        <EditText
            android:id="@+id/accountNumbertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enterAccountNumber" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sortCodelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sortCode"
            />

        <EditText
            android:id="@+id/sortCodetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enterSortCode"
            />
    </LinearLayout>
</LinearLayout>
