<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="20dp">

    <TextView
        android:id="@+id/confrimPaymentlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPayment"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amountlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/paymentAmountlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payeelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payee"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/payeeUsernamelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



    <Button
        android:id="@+id/confirmbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"/>

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>
    
    
</LinearLayout>
