<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


        <TextView
            android:id="@+id/titlelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_margin="46dp"
            android:text="@string/makePayment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView37"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    />

                <TextView
                    android:id="@+id/currentBalancelbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:text="0.00" />
        </LinearLayout>


        <TextView
            android:id="@+id/inputCardDetailslbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/inputCardDetails" />

        <TextView
            android:id="@+id/enterPaymentAmountlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/enterPaymentAmount" />

        <EditText
            android:id="@+id/paymentAmounttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="0.00"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/enterPayee"/>

        <EditText
            android:id="@+id/payeeUsernametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/payee" />


        <include layout="@layout/confirm_payment"/>


        </LinearLayout>

</ScrollView>