<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/usernamelbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pendingTransactions"
                    />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completedTransactions"
                  />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/cardLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

            <Button
                android:id="@+id/makePaymentbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makePayment" />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_marginRight="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    />

                <TextView
                    android:id="@+id/currentBalancelbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>